@@ -190,14 +190,6 @@ Description: Apache development headers - threaded MPM
  threaded versions of apache2; see the apache2 package description
  for more details.
 
-Package: apache2-src
-Priority: extra
-Architecture: all
-Description: Apache source code
- This package includes the complete and patched source code for the
- Apache HTTPD.  It is useful for other packages to build-depend on in
- order to build custom MPMs.
-
 Package: apache2-dbg
 Section: debug
 Priority: extra
